--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,8 +41,11 @@
                 <mat-panel-title>Saját dokumentumok</mat-panel-title>
             </mat-expansion-panel-header>
             <ul>
-                <li matTooltip="MOX_ART_KT_EP_KVT_ALT_921_R00_KOLTSEGVETES-KG.xlsx" matTooltipShowDelay="500">MOX_ART_KT_EP_KVT_ALT_921_R00_KÖLTSÉGVETÉS - S&C EP Építészet S&C - MÓDOSÍTOTT!!</li>
-                <li matTooltip="MOX_PER_KT_GP_MUL_ALT_001_R00_MUSZAKI_LEIRAS.pdf" matTooltipShowDelay="500">MOX_PER_KT_GP_MUL_ALT_001_R00_MŰSZAKI_LEÍRÁS.pdf</li>
+                <li matTooltip="MOX_ART_KT_EP_KVT_ALT_921_R00_KOLTSEGVETES-KG.xlsx" matTooltipShowDelay="500">12_2021 (VI.29) XIII. kerület településkép védelem</li>
+                <li matTooltip="MOX_PER_KT_GP_MUL_ALT_001_R00_MUSZAKI_LEIRAS.pdf" matTooltipShowDelay="500">280_2024. (IX. 30.) Korm. rendelet</li>
+                <li matTooltip="MOX_PER_KT_GP_MUL_ALT_001_R00_MUSZAKI_LEIRAS.pdf" matTooltipShowDelay="500">281_2024. (IX. 30.) Korm. rendelet</li>
+                <li matTooltip="MOX_PER_KT_GP_MUL_ALT_001_R00_MUSZAKI_LEIRAS.pdf" matTooltipShowDelay="500">2023. évi C törvény</li>
+                <li matTooltip="MOX_PER_KT_GP_MUL_ALT_001_R00_MUSZAKI_LEIRAS.pdf" matTooltipShowDelay="500">Budapest Főváros XIII. Kerületi KÉSZ</li>
             </ul>
         </mat-expansion-panel>
     
@@ -67,11 +70,12 @@
     
         <mat-expansion-panel>
             <mat-expansion-panel-header>
-                <mat-panel-title>Jogszabályi környezet</mat-panel-title>
+                <mat-panel-title>Feldolgozott képek:</mat-panel-title>
             </mat-expansion-panel-header>
             <ul>
-                <li matTooltip="LAMBDA_GEPESZ___EGYEDI_╡RAS_Stand__2024_02_01_HASZN╡LHATα.pdf" matTooltipShowDelay="500">LAMBDA_GÉPÉSZ_EGYEDI_ÁRAS_Stand_2024_02_01_HASZNÁLHATÓ.pdf</li>
-                <li matTooltip="Stand_98_Kft._Moxy_Hotel_41126.10.pdf" matTooltipShowDelay="500">Stand_98_Kft._Moxy_Hotel_41126.10.pdf</li>
+                <li>KESZ 4. melléklet: Az építési övezetek magassági szabályozása</li>
+                <li>KESZ 7. melléklet: A beépítési mód, az építési hely, az építési vonal, a zöldfelületek,
+                    valamint az épület szintterületének és a magasságának rajzi meghatározása</li>
                 <!--li matTooltip="calcDB_2023_mod_7.xlsm" matTooltipShowDelay="500">calcDB_2023_mód_7.xlsm</li>
                 <li matTooltip="FQ_arajanlat_Negyszog.xlsx" matTooltipShowDelay="500">FQ_árajánlat_Négyszög.xlsx</li>
                 <li matTooltip="KAOT_20241122_MOX_ART_KT_EP_KVT_ALT_921_R00_KOLTSEGVETES_alvallalkozo.xlsx" matTooltipShowDelay="500">KAOT_20241122_MOX_ART_KT_EP_KVT_ALT_921_R00_KÖLTSÉGVETÉS_alvállalkozó.xlsx</li>
